fixed burger menu

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500;600&family=Poppins:wght@300;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500;600&family=Poppins:wght@300;400&family=Volkhov:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -37,14 +37,13 @@
                     </ul>
                 </li>
                 <li class="sign-nav__item">
-                    <input type="checkbox" id="burger-toggle" class="burger-toggle">
-                    <label for="burger-toggle" class="burger-icon">
+                    <button class="burger-toggle">
                         <img src="img/icn menu .icn-xs.svg" alt="">
-                    </label>
+                    </button>
                 </li>
             </ul>
         </div>
-        <ul class="burger-menu" style="visibility: visible">
+        <ul class="burger-menu">
             <li class="burger-menu__item"><a href="">Destinations</a></li>
             <li class="burger-menu__item"><a href="">Hotels</a></li>
             <li class="burger-menu__item"><a href="">Flighs</a></li>
@@ -66,7 +65,7 @@
                 </div>
             </div>
         </div>
-        <img src="img/traveller.pn" alt="traveller">
+        <img src="img/traveller.png" alt="traveller">
     </main>
     <div class="services">
         <p>Category</p>
@@ -143,7 +142,7 @@
             </div>
         </div>
     </div>
-    <!-- <script src="script.js"></script> -->
+    <script src="script.js"></script>
 </body>
 </html>
 {
