--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 </head>
 <body>
     <header>
+        
         <div class="container">
+            <img src="img/Decore.png" alt="">
             <img class="header__logo" src="img/Logo.svg" alt="">
             <ul class="top-nav">
                 <li class="top-nav__item"><a href="">Destinations</a></li>
@@ -60,11 +62,13 @@
             <div class="hero__content-btns">
                 <button>Find out more</button>
                 <div class="hero__content-btns-play-demo">
-                    <button></button>
+                    <button><img src="img/play_demo.svg" alt=""></button>
                     <p>Play demo</p>
                 </div>
             </div>
         </div>
+        <img src="img/plane.svg" alt="">
+        <img src="img/plane.svg" alt="">
         <img src="img/traveller.png" alt="traveller">
     </main>
     <div class="services">
@@ -72,34 +76,38 @@
         <h1>We offer best services</h1>
         <div class="services__categories">
             <div class="services__categories-item">
-                <img src="img/calculated weather.sv" alt="calculated weather">
+                <img src="img/calculated weather.svg" alt="calculated weather">
                 <p>Calculated Weather</p>
                 <p>Built Wicket longer
                     admire do barton 
                     vanity itself do in it.
                 </p>
+                <div class="services__categories-item-block"></div>
             </div>
             <div class="services__categories-item">
-                <img src="img/best flights.sv" alt="best flights">
+                <img src="img/best flights.svg" alt="best flights">
                 <p>Best Flights</p>
                 <p>
                     Engrossed listening. Park gate sell they west hard for the.
                 </p>
+                <div class="services__categories-item-block"></div>
             </div>
             <div class="services__categories-item">
-                <img src="img/local events.sv" alt="local events">
+                <img src="img/local events.svg" alt="local events">
                 <p>Local Events</p>
                 <p>
                     Barton vanity itself do in it. Preferd to men it engrossed listening. 
                 </p>
+                <div class="services__categories-item-block"></div>
             </div>
             <div class="services__categories-item">
-                <img src="img/customization.sv" alt="customization">
+                <img src="img/customization.svg" alt="customization">
                 <p>Customization</p>
                 <p>We deliver outsourced
                     aviation services for
                     military customers
                 </p>
+                <div class="services__categories-item-block"></div>
             </div>
         </div>
     </div>
